<resources>
    <string name="app_name">Marvel HQs</string>
    <string name="LOG_OUT">Log out</string>
    <string name="FAVORITE">Favorite</string>
    <string name="USER_LOGIN_FAILED">Usuário ou senha incorretos</string>
    <string name="RETRIVE_COMICS_FAILED_TITLE">Erro de comunicação com o Servidor</string>
    <string name="RETRIVE_COMICS_FAILED_MESSAGE">Ocorreu um erro na comunicação com o servidor. Por favor tente novamente mais tarde</string>
    <string name="LOGIN_FAILED_MESSAGE">Seu usuário ou senha estão incorretos, favor tentar novamete.</string>
    <string name="UNDERSTAND">Entendi</string>
    <string name="LOGIN_BUTON_TITLE">Login</string>
    <string name="NO_TITLE">No title</string>
    <string name="NUMBER_OF_PAGES_NOT_INFORMED">Not informed</string>
    <string name="NUMBER_OF_PAGES_TITLE">Number of pages: %d</string>
    <string name="PASSOWRD_PLACEHOLDER">Digite sua senha</string>
    <string name="PASSWORD_TITLE">Senha</string>
    <string name="USER_PLACEHOLDER">Digite o seu Usuário</string>
    <string name="USER_TITLE">Usuário</string>
    <string name="USER_TEST_TAG">USER_TEST_TAG</string>
    <string name="PASSWORD_TEST_TAG">PASSWORD_TEST_TAG</string>
    <string name="TOP_BAR_TITLE">Marvel</string>
</resources>